changed file, added feature engineering before encoding, added pps

--- a/categoricals/Categoricals.ipynb
+++ b/categoricals/Categoricals.ipynb
@@ -24,8 +24,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd # for data transformations\n",
-    "import sklearn # for some general machine learning and other transformations\n",
-    "\n",
     "from langdetect import detect # for language detection"
    ]
   },
@@ -44,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('video_data.csv')"
+    "df = pd.read_csv('video_channel_data.csv')"
    ]
   },
   {
@@ -244,7 +242,9 @@
    "id": "b194bf54-c91e-47bd-a5fb-8a7cf7979691",
    "metadata": {},
    "source": [
-    "video_id is the unique identifier for the videos, and each observation in this dataset, so it's expected that it's 100% unique. A lot of the other string-based data like titles and descriptions are also highly unique. Numeric values are also expected to be highly unique. Categories like category_id are expected to have low cardinality (low uniques) because the categories are repeatedly used across many observations. "
+    "- video_id is the unique identifier for the videos, and each observation in this dataset, so it's expected that it's 100% unique. A lot of the other string-based data like titles and descriptions are also highly unique.\n",
+    "- Numeric values are also expected to be highly unique\n",
+    "- Categories like category_id and topic_categories are expected to have low cardinality (low uniques) because the categories are repeatedly used across many observations. "
    ]
   },
   {
@@ -253,9 +253,10 @@
    "metadata": {},
    "source": [
     "__What does this mean for us?__\n",
-    "- video_id clearly can't be used as a feature.\n",
+    "- video_id can't be used as a feature.\n",
     "- Either channel_id or channel_title can be used as a potential feature.\n",
     "- video_title, video_description, and video_tags have opportunities to be engineered into useable features.\n",
+    "- There are plenty of other feature engineering opportunities for other columns.\n",
     "\n",
     "__other notes__\n",
     "- view_count, like_count, and comment_count are already ruled out as potential features because they're more of outcomes.\n",
@@ -279,7 +280,9 @@
    "id": "3309e8ac-1b0f-4908-8e93-3c6321769a76",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ppscore as pps"
+   ]
   },
   {
    "cell_type": "code",
@@ -287,15 +290,56 @@
    "id": "b3711486-e9d3-4d87-a9e1-7c8058c9bf0d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Check if one feature can predict a target\n",
+    "pps.score(df, 'channel_id', 'view_count')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fc3d3d7-f1e0-4cd1-ae7f-fe8fd67918f2",
+   "metadata": {},
+   "source": [
+    "Calculate the Predictive Power Score (PPS) for \"x predicts y\"\n",
+    "- The score always ranges from 0 to 1 and is data-type agnostic.\n",
+    "- A score of 0 means that the column x cannot predict the column y better than a naive baseline model.\n",
+    "- A score of 1 means that the column x can perfectly predict the column y given the model.\n",
+    "- A score between 0 and 1 states the ratio of how much potential predictive power the model achieved compared to the baseline model."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "955a78f4-6f32-45b2-bd3d-7363c08a62ac",
+   "id": "9f1a7fd5-4929-49ab-95de-f966d1d9e7cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Check if one feature can predict another feature\n",
+    "pps.score(df, 'channel_id', 'view_count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc7fe0bd-5df3-4f6b-b3d6-d1bc6ec39ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if any feature can predict another feature\n",
+    "pps.predictors(df, 'view_count').pivot(columns='y', index='x', values='ppscore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdce2593-772c-4441-b404-e754079b2e92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a PPS matrix; Create smaller sample to demonstrate\n",
+    "df_sample = df[['channel_id', 'channel_title', 'video_title', 'category_id', 'view_count']]\n",
+    "pps.matrix(df_sample).pivot(columns='y', index='x', values='ppscore')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,6 +355,202 @@
    "metadata": {},
    "source": [
     "Let's take a look at our options for encoding structured categorical variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c29caa88-4048-4d56-9541-e5138669a1eb",
+   "metadata": {},
+   "source": [
+    "## Do we even need to encode? or can we engineer first?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2592d7d-7147-40de-9bdb-2ffe55913010",
+   "metadata": {},
+   "source": [
+    "We can extract information from these column values first before encoding them to get more information. For example:\n",
+    "- getting the \"age\" of the video and the channel (today - pub date)\n",
+    "- number of video_tags (len) and topic_categories\n",
+    "- length of video_title and video_description\n",
+    "- language of the video_title\n",
+    "\n",
+    "Other possibilities I won't cover in this demo:\n",
+    "- Get topics from the descriptions (can be via topic modelling)\n",
+    "- Check if certain keywords and tags are in descriptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22e3a497-3304-44b2-ba37-3e119ec0b36c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the age of the video\n",
+    "df['video_age'] = pd.Timestamp.today(tz='UTC') - pd.to_datetime(df['pub_date'])\n",
+    "df['video_age'] = df['video_age'].dt.days\n",
+    "\n",
+    "# Get the age of the channel\n",
+    "df['channel_age'] = pd.Timestamp.today(tz='UTC') - pd.to_datetime(df['channel_pub_date'])\n",
+    "df['channel_age'] = df['channel_age'].dt.days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115743be-83c3-4735-ad83-eff2556eeec4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get number of video_tags\n",
+    "df['video_tags'] = df['video_tags'].fillna('')\n",
+    "df['video_tags'] = df['video_tags'].str.replace('[','').replace(']','')\n",
+    "df['video_tags'] = df['video_tags'].apply(lambda x: x.split(', '))\n",
+    "df['num_tags'] = df['video_tags'].str.len()\n",
+    "\n",
+    "# If empty tags, assign zero\n",
+    "df.loc[df['video_tags'].astype('string') == \"['']\", 'num_tags'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a49e5c72-fc1d-434e-8e3f-13d580d2b265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get number of topic_categories\n",
+    "df['topic_categories'] = df['topic_categories'].fillna('')\n",
+    "df['topic_categories'] = df['topic_categories'].str.replace('[','').replace(']','')\n",
+    "df['topic_categories'] = df['topic_categories'].apply(lambda x: x.split(', '))\n",
+    "df['num_categories'] = df['topic_categories'].str.len()\n",
+    "\n",
+    "# If empty tags, assign zero\n",
+    "df.loc[df['topic_categories'].astype('string') == \"['']\", 'num_categories'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70853a09-be15-47a3-872b-ca23c1ad07a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get length of video title\n",
+    "df['len_title'] = df['video_title'].str.len()\n",
+    "\n",
+    "# Get length of video description\n",
+    "df['len_desc'] = df['video_description'].str.len()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e32395d3-ad5b-4028-a840-339bb6032ed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get language of each video based on the title\n",
+    "df['language'] = df['video_title'].apply(detect)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b13d162-e6ae-47e9-abd1-56914a24642b",
+   "metadata": {},
+   "source": [
+    "### Cleanup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e86a7d3-6748-4a69-a400-d4d5393341f6",
+   "metadata": {},
+   "source": [
+    "We can now remove the columns we don't plan to use as features in this exercise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b6ec69e-bf5a-450e-8514-9cdc34c80eaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['video_id', # too unique\n",
+    "              'video_title', # already engineered\n",
+    "              'video_description', # already engineered\n",
+    "              'topic_categories', # already engineered\n",
+    "              'pub_date', # too unique\n",
+    "              'channel_pub_date', # already engineered\n",
+    "              'video_tags', # already engineered\n",
+    "              'branding_keywords', # poor quality\n",
+    "              'channel_title', # redundant with channel_id\n",
+    "              'title', # redundant with channel_title\n",
+    "              'description', # skip for now. doesn't seem relevant\n",
+    "              'custom_url', # redundant with channel identifiers\n",
+    "              'made_for_kids', # poor quality\n",
+    "             ], \n",
+    "             axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85f78075-6019-4e43-8b77-938a14b9f8c8",
+   "metadata": {},
+   "source": [
+    "Rearrange the columns to see features first (video and channel metadata) then potential targets (view metrics)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "970b9589-5fc8-4541-9b5c-5018d80243a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = [\n",
+    "    'channel_id',\n",
+    "    'category_id',\n",
+    "    'language',\n",
+    "    'country',\n",
+    "    'channel_view_count',\n",
+    "    'subscriber_count',\n",
+    "    'video_count',\n",
+    "    'video_age',\n",
+    "    'channel_age',\n",
+    "    'num_tags',\n",
+    "    'num_categories',\n",
+    "    'len_title',\n",
+    "    'len_desc'\n",
+    "]\n",
+    "\n",
+    "targets = [\n",
+    "    'view_count',\n",
+    "    'like_count',\n",
+    "    'comment_count'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d159ec89-4f12-4cc7-a4d5-2d8bf6768f66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_processed = df[features + targets]\n",
+    "df_processed.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b10d369f-6bd7-454b-b130-2a5538394288",
+   "metadata": {},
+   "source": [
+    "We're left with 4 categorical features that we can encode."
    ]
   },
   {
@@ -335,7 +575,9 @@
    "id": "87825e2d-cc30-4ec6-a39a-0c18e9240dc9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder"
+   ]
   },
   {
    "cell_type": "code",
