added train-test split, onehot encoding

--- a/categoricals/Categoricals.ipynb
+++ b/categoricals/Categoricals.ipynb
@@ -550,7 +550,97 @@
    "id": "b10d369f-6bd7-454b-b130-2a5538394288",
    "metadata": {},
    "source": [
-    "We're left with 4 categorical features that we can encode."
+    "We're left with 4 categorical features that we can encode. Let's check our unique values again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7575ba5-f620-46a5-864d-abdb1cbd93cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = []\n",
+    "headers = ['column', 'uniques', 'percent_unique']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c06e89e-86a3-4653-b43c-1f3a04f1be9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df_processed.columns:\n",
+    "    uniques = df_processed[col].nunique()\n",
+    "    summary.append((col, uniques, uniques*100/len(df)))\n",
+    "\n",
+    "summary_df = pd.DataFrame(summary, columns=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c0c9fdb-ab06-43d9-a89e-6391d010e34f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfddaff6-36f2-4090-9430-83d1611d4304",
+   "metadata": {},
+   "source": [
+    "### Train-Test Split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb6aca9b-d5eb-4bb1-aa00-883cbb5d97ab",
+   "metadata": {},
+   "source": [
+    "Succeeding encoding methods may use a set of data to fit its encoding, so we need to make sure to fit only on training data to avoid looking into the future."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b909558-8e35-4cb7-a394-2ae1a988e2fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74b42b73-1903-4830-b8a9-b725c03ba58f",
+   "metadata": {},
+   "source": [
+    "We need a dataframe of X (features) and Y (targets). Let's say we're predicting view_count for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c195fc3-f7c7-4936-ae24-6935d0546098",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_processed[features]\n",
+    "Y = df_processed['view_count']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b072468d-e886-49cd-a452-d861fe800920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=1)"
    ]
   },
   {
@@ -566,7 +656,7 @@
    "id": "e08f48bb-400c-4dc3-8f15-5609e7671db7",
    "metadata": {},
    "source": [
-    "One Hot Encoding creates a binary 0/1 column for each value in the categorical variable, and maps it to that observation. If the observation originally had the column as the value, it is marked with a 1."
+    "One Hot Encoding creates a binary 0/1 column for __each value__ in the categorical variable, and maps it to that observation. If the observation originally had the column as the value, it is marked with a 1. In our case, it may be better to skip the channel_id when doing the one-hot encoding as it will create 339 new columns, but we can try it on language and category_id."
    ]
   },
   {
@@ -582,10 +672,118 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f80d89ad-9ba2-433e-b8e4-860f1fcb9528",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initiate the encoder\n",
+    "onehot = OneHotEncoder(handle_unknown='ignore', sparse_output=False, drop=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a0f571a9-7127-4cef-88f5-0cca338ad8f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# have the encoder learn the language as categories\n",
+    "onehot.fit(x_train[['language']])\n",
+    "\n",
+    "# set one-hot output as pandas dataframe\n",
+    "onehot.set_output(transform='pandas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f960d5c-25d5-4789-9622-9eceb7291c8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform the column into the 0/1 matrix for the training set and test set\n",
+    "onehot_train = onehot.transform(x_train[['language']])\n",
+    "onehot_test = onehot.transform(x_test[['language']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d54af4a6-235b-4070-bee7-61769ea76aac",
+   "metadata": {},
+   "source": [
+    "### The result for each row should match the language it was originally assigned to."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1372985-3770-4976-bb1a-d238c823a7b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onehot_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7375547-ca5b-4f51-8859-0c726e85d619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f144eb1e-de7b-4c9b-8bf7-e2dd6df18cbb",
+   "metadata": {},
+   "source": [
+    "### We can now append the 0/1 matrix to the main dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfc087df-33c4-4ba3-b79e-cd0cdd4058b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train_onehot = pd.concat([x_train, onehot_train], axis=1)\n",
+    "x_test_onehot = pd.concat([x_test, onehot_test], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d816563-f0cf-403b-bae3-4dd8e2e29546",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop the language column\n",
+    "x_train_onehot = x_train_onehot.drop('language', axis=1)\n",
+    "x_test_onehot = x_test_onehot.drop('language', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d237e8-9e1b-4260-a2fd-608e5446c60a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train_onehot.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe0d3f11-c803-4bfa-b143-53ce4db6d191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test_onehot.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -596,7 +794,10 @@
     "- Its numeric form makes sense and makes it viable for mathematical operations\n",
     "\n",
     "__Cons__\n",
-    "- Often inefficient when dealing with large datasets, especially with high cardinality (unique values) categorical variables."
+    "- Often inefficient when dealing with large datasets, especially with high cardinality (unique values) categorical variables.\n",
+    "\n",
+    "__Other Notes__\n",
+    "- Null values will need to be handled beforehand (ex. imputation, filled in as its own category)."
    ]
   },
   {
