added info on tree-based methods

--- a/categoricals/Categoricals.ipynb
+++ b/categoricals/Categoricals.ipynb
@@ -877,7 +877,7 @@
    "id": "373721d5-0465-4649-87ec-84c24f01bdb8",
    "metadata": {},
    "source": [
-    "# Machine Learning"
+    "# Machine Learning Options"
    ]
   },
   {
@@ -901,7 +901,72 @@
    "id": "8d7037c6-d55d-4ade-99c3-3ac414220638",
    "metadata": {},
    "source": [
-    "## Random Forest"
+    "## Tree-Based Methods (Ensembles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecc1fbe8-743b-4888-900a-e63dc3bf3a26",
+   "metadata": {},
+   "source": [
+    "Tree-based methods are fairly robust at handling categorical variables because it doesn't rely on _just_ the mathematical property of the numeric representation. Note that different frameworks (packages) have different ways they handle categorical variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe84fc3f-90a6-425f-8cea-d7a4dcab2668",
+   "metadata": {},
+   "source": [
+    "<table style=\"width: 100%;\">\n",
+    "    <thead>\n",
+    "        <tr>\n",
+    "            <th style=\"text-align:left;\">Aspect</th>\n",
+    "            <th style=\"text-align:center;\">XGBoost</th>\n",
+    "            <th style=\"text-align:center;\">CatBoost</th>\n",
+    "            <th style=\"text-align:center;\">LightGBM</th>\n",
+    "        </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td>Encoding input</td>\n",
+    "            <td style=\"text-align:center;\">Encoded, indicate indices</td>\n",
+    "            <td style=\"text-align:center;\">Indicate indices</td>\n",
+    "            <td style=\"text-align:center;\">As type \"category\"</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>Encoding method</td>\n",
+    "            <td style=\"text-align:center;\">Label encoding</td>\n",
+    "            <td style=\"text-align:center;\">Ordered target encoding</td>\n",
+    "            <td style=\"text-align:center;\">Label encoding</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>Optimal split</td>\n",
+    "            <td style=\"text-align:center;\">Similar leaf values</td>\n",
+    "            <td style=\"text-align:center;\">Greedy splitting</td>\n",
+    "            <td style=\"text-align:center;\">Gradient One-Sided Sampling (GOSS) + Feature Bundling</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>Tree Growth</td>\n",
+    "            <td style=\"text-align:center;\">Level-wise</td>\n",
+    "            <td style=\"text-align:center;\">Level-wise, Symmetric</td>\n",
+    "            <td style=\"text-align:center;\">Leaf-wise</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>Null handling</td>\n",
+    "            <td style=\"text-align:center;\">Input as is*</td>\n",
+    "            <td style=\"text-align:center;\">Need to Impute</td>\n",
+    "            <td style=\"text-align:center;\">Input as is</td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73ce3e42-4e4a-4950-84fe-713e206db9d9",
+   "metadata": {},
+   "source": [
+    "### Random Forests"
    ]
   },
   {
@@ -917,7 +982,7 @@
    "id": "171faf5a-b2f5-483b-8cac-ccf8c97ff800",
    "metadata": {},
    "source": [
-    "## Gradient Boosted Trees"
+    "### Gradient Boosted Trees (GBT)"
    ]
   },
   {
@@ -933,7 +998,7 @@
    "id": "1b299bd5-05ae-4562-aa58-33e947e905f2",
    "metadata": {},
    "source": [
-    "# Extra Stuff"
+    "# Extra Techniques"
    ]
   },
   {
@@ -951,54 +1016,6 @@
    "source": [
     "Using a 1000-row dataset may be an unfair use case for neural networks on categorical variables. So this won't be demonstrated at this time, but we can discuss why it may not work for categorical variables, especially unordered / nominal ones. It mainly has to do with the fact that neural networks are series of mathematical operations, like taking the max or exponential, and combinations of them. This hardly makes sense for a random number that serves as a stand-in for our categorical value."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca63321e-77e0-4286-bb7a-a21fc85fcd4c",
-   "metadata": {},
-   "source": [
-    "## Feature Engineering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ced76abd-c3a1-45e4-a746-4784cba7a17c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e553b8c3-77a8-4b2b-a6c8-26236074982b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "84e9152d-7c62-49f7-830b-99c315b0a666",
-   "metadata": {},
-   "source": [
-    "## Word2Vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f23733cd-48cd-4fd5-b6ec-8ddcd4eebae1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18c165b6-2858-49b4-b646-e3c4958bad20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
