--- a/categoricals/Categoricals.ipynb
+++ b/categoricals/Categoricals.ipynb
@@ -1395,8 +1395,18 @@
    "id": "a4a8e257-ef05-4416-8959-d225e05bf7d8",
    "metadata": {},
    "source": [
-    "Using a 1000-row dataset may be an unfair use case for neural networks on categorical variables. So this won't be demonstrated at this time, but we can discuss why it may not work for categorical variables, especially unordered / nominal ones. It mainly has to do with the fact that neural networks are series of mathematical operations, like taking the max or exponential, and combinations of them. This hardly makes sense for a random number that serves as a stand-in for our categorical value."
+    "Using a 1000-row dataset may be an unfair use case for neural networks on categorical variables. So this won't be demonstrated at this time, but we can discuss why it may not work for categorical variables, especially unordered / nominal ones. It mainly has to do with the fact that neural networks are series of mathematical operations, like taking the max or exponential, and combinations of them. This hardly makes sense for a random number that serves as a stand-in for our categorical value.\n",
+    "\n",
+    "You can, however, use it for one-hot encoded or target-encoded nominal variables or label-encoded ordinal variables."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3726bed6-4e08-49f1-a074-a92e5323a619",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
