capitalisation of headers

--- a/categoricals/Categoricals.ipynb
+++ b/categoricals/Categoricals.ipynb
@@ -260,7 +260,7 @@
     "- video_title, video_description, and video_tags have opportunities to be engineered into useable features.\n",
     "- There are plenty of other feature engineering opportunities for other columns.\n",
     "\n",
-    "__other notes__\n",
+    "__Other notes__\n",
     "- view_count, like_count, and comment_count are already ruled out as potential features because they're more of outcomes.\n",
     "- pull_timestamp is a metadata field as it's just when I pulled in the data."
    ]
@@ -364,7 +364,7 @@
    "id": "c29caa88-4048-4d56-9541-e5138669a1eb",
    "metadata": {},
    "source": [
-    "## Do we even need to encode? or can we engineer first?"
+    "## Do we even need to encode? Or can we engineer first?"
    ]
   },
   {
