--- a/categoricals/Categoricals.ipynb
+++ b/categoricals/Categoricals.ipynb
@@ -24,7 +24,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd # for data transformations\n",
-    "from langdetect import detect # for language detection\n",
     "\n",
     "pd.set_option('display.precision', 10)"
    ]
@@ -87,7 +86,9 @@
     "\n",
     "![image.png](attachment:2f1ff4e3-9f89-4139-9b7a-a2043699d2c1.png)\n",
     "\n",
-    "Structured Data can be thought of as two types: numeric (integers, floats) and categorical (strings, booleans*). Categorical variables are either nominal (unordered ex. colours: red, blue, yellow) or ordinal (good, better, best). Some cases like days of the week can be represented as either a category or a number, depending on the application (i.e. if you're using the variable as a category or you're using difference in time as the variable).\n",
+    "Source: [__[365 Data Science](https://365datascience.com/trending/data-types-complete-guide/)__]\n",
+    "\n",
+    "Structured Data can be thought of as two types: numeric (integers, floats) and categorical (strings, booleans*). Categorical variables are either nominal (unordered ex. colours: red, blue, yellow) or ordinal (good, better, best). Some cases like dates (i.e. temporal data) can be represented as either a category or a number, depending on the application (i.e. if you're using the variable as a category like days of the week or you're using difference in time as the variable like timedelta).\n",
     "\n",
     "Mathematical operations (+ - / *) don't make much sense with nominal categorical variables. How do we add or subtract cats and dogs? \n",
     "\n",
@@ -109,11 +110,11 @@
    "id": "758acb4d-bb6f-4f3b-bfa7-59b0c52d725c",
    "metadata": {},
    "source": [
-    "A lot of machine learning techniques (ex. linear methods like regression, support vector machines, and neural networks) use mathematical operations to generate predictions. Sometimes these methods yield fairly good results; however, _sometimes_ is unreliable. \n",
+    "A lot of machine learning techniques (ex. linear methods like regression, support vector machines, and neural networks) use mathematical operations to generate predictions. Sometimes these methods when applied directly to categorical variables yield fairly good results; however, _sometimes_ is unreliable. \n",
     "\n",
-    "Knowing math doesn't fully make sense when we perform them on certain categorical variables, we need to consider ways to either:\n",
+    "Because math doesn't fully make sense when we perform them on certain categorical variables, we need to consider ways to either:\n",
     "- transform categoricals into numerics, or\n",
-    "- use techniques that can use categoricals directly"
+    "- use techniques/packages/frameworks that can use categoricals directly"
    ]
   },
   {
@@ -163,7 +164,7 @@
    "id": "22101687-00f6-4a3c-a759-bf25b9640832",
    "metadata": {},
    "source": [
-    "We can cast category_id as a category object or a string object depending on what we want to do. For now, I just want to see it as a string."
+    "We can cast category_id as a category object or a string object depending on what we want to do. For now, I just want to see it as a category."
    ]
   },
   {
@@ -173,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['category_id'] = df['category_id'].astype('string')"
+    "df['category_id'] = df['category_id'].astype('category')"
    ]
   },
   {
@@ -199,9 +200,9 @@
    "id": "6e7b676e-fb56-46f0-b182-e104c45564a3",
    "metadata": {},
    "source": [
-    "I find unique values to be an exploratory checkpoint for categorical variables, because you can find highly unique variables, which would make it hard for the machine to learn meaningful patterns. Personally, if it's over 80% unique for the whole dataset, I find it to be something to be cautious about. \n",
+    "I find unique values to be an exploratory checkpoint for categorical variables, because you can find highly unique variables (high cardinality), which would make it hard for the machine to learn meaningful patterns (ex. overfitting every category). Personally, if the variable has over 80% of its values as unique for the whole dataset, I find it to be something to be cautious about. \n",
     "\n",
-    "For me to examine this, I create a simple summary dataframe."
+    "For me to examine this, I create a simple summary dataframe using a list of tuples."
    ]
   },
   {
@@ -271,7 +272,7 @@
    "metadata": {},
    "source": [
     "## Where's the correlation?\n",
-    "Usually, for numeric variables, we're able to draw correlation matrices showing variables that have high correlations with each other, which can indicate dependencies. Because we're dealing with categorical variables, the same analysis is not afforded to us. However, we can use the [Predictive Power Score (PPS)](https://pypi.org/project/ppscore), which aims to answer similar questions.\n",
+    "Usually, for numeric variables, we're able to draw correlation matrices showing variables that have high correlations with each other, which can indicate dependencies to be pruned to avoid overfitting. Because we're dealing with categorical variables, the same analysis is not afforded to us. However, we can use the [Predictive Power Score (PPS)](https://pypi.org/project/ppscore), which aims to answer similar questions.\n",
     "\n",
     "One of the ways to do it is by running pairs of PPS for each feature combination, but for this exercise, we can just semantically remove dependencies and redundancies."
    ]
@@ -317,7 +318,7 @@
    "outputs": [],
    "source": [
     "# Check if one feature can predict another feature\n",
-    "pps.score(df, 'channel_id', 'view_count')"
+    "pps.score(df, 'category_id', 'channel_id')"
    ]
   },
   {
@@ -364,7 +365,7 @@
    "id": "c29caa88-4048-4d56-9541-e5138669a1eb",
    "metadata": {},
    "source": [
-    "## Do we even need to encode? Or can we engineer first?"
+    "## Can we engineer first?"
    ]
   },
   {
@@ -407,10 +408,10 @@
    "outputs": [],
    "source": [
     "# Get number of video_tags\n",
-    "df['video_tags'] = df['video_tags'].fillna('')\n",
-    "df['video_tags'] = df['video_tags'].str.replace('[','').replace(']','')\n",
-    "df['video_tags'] = df['video_tags'].apply(lambda x: x.split(', '))\n",
-    "df['num_tags'] = df['video_tags'].str.len()\n",
+    "df['video_tags'] = df['video_tags'].fillna('') # there were some videos that did not have tags\n",
+    "df['video_tags'] = df['video_tags'].str.replace('[','').replace(']','') # the column was formatted as a string\n",
+    "df['video_tags'] = df['video_tags'].apply(lambda x: x.split(', ')) # convert the string to a list\n",
+    "df['num_tags'] = df['video_tags'].str.len() # get the length\n",
     "\n",
     "# If empty tags, assign zero\n",
     "df.loc[df['video_tags'].astype('string') == \"['']\", 'num_tags'] = 0"
@@ -455,6 +456,7 @@
    "outputs": [],
    "source": [
     "# Get language of each video based on the title\n",
+    "from langdetect import detect # for language detection\n",
     "df['language'] = df['video_title'].apply(detect)"
    ]
   },
@@ -529,10 +531,10 @@
     "    'len_desc'\n",
     "]\n",
     "\n",
-    "targets = [\n",
+    "target = [\n",
     "    'view_count',\n",
-    "    'like_count',\n",
-    "    'comment_count'\n",
+    "    #'like_count',\n",
+    "    #'comment_count'\n",
     "]"
    ]
   },
@@ -543,7 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_processed = df[features + targets]\n",
+    "df_processed = df[features + target]\n",
     "df_processed.head()"
    ]
   },
@@ -603,7 +605,7 @@
    "id": "eb6aca9b-d5eb-4bb1-aa00-883cbb5d97ab",
    "metadata": {},
    "source": [
-    "Succeeding encoding methods may use a set of data to fit its encoding, so we need to make sure to fit only on training data to avoid looking into the future."
+    "Succeeding encoding methods may use a set of data to fit its encoding, so we need to make sure to fit only on training data to avoid looking into the future (data leakage)."
    ]
   },
   {
@@ -632,7 +634,7 @@
    "outputs": [],
    "source": [
     "X = df_processed[features]\n",
-    "Y = df_processed['view_count']"
+    "Y = df_processed[target]"
    ]
   },
   {
