added resources. made more specific statements on pros & cons of target encoding

--- a/categoricals/Categoricals.ipynb
+++ b/categoricals/Categoricals.ipynb
@@ -262,8 +262,7 @@
     "- There are plenty of other feature engineering opportunities for other columns.\n",
     "\n",
     "__Other notes__\n",
-    "- view_count, like_count, and comment_count are already ruled out as potential features because they're more of outcomes.\n",
-    "- pull_timestamp is a metadata field as it's just when I pulled in the data."
+    "- view_count, like_count, and comment_count are already ruled out as potential features because they're more of outcomes."
    ]
   },
   {
@@ -328,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check if any feature can predict another feature\n",
+    "# Check if any feature can predict the target\n",
     "pps.predictors(df, 'view_count').pivot(columns='y', index='x', values='ppscore')"
    ]
   },
@@ -458,6 +457,16 @@
     "# Get language of each video based on the title\n",
     "from langdetect import detect # for language detection\n",
     "df['language'] = df['video_title'].apply(detect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29c795c8-9b66-49ed-977d-2f909e30eb21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -983,15 +992,16 @@
     "- fairly simple\n",
     "\n",
     "__Cons__\n",
-    "- Risks data leakage (using target variable to inform features)\n",
-    "  - even with train-test splitting, there is some struggle to generalise\n",
+    "- Base form risks data leakage (using target variable to inform features)\n",
+    "  - even with train-test splitting, there can be struggle to generalise as the signal's pattern becomes memorised\n",
     "  - can be brought about by collinearity in features, which can't be weeded out in categorical variables\n",
     "- May not generalise well on certain distributions (ex. time-based, skewed)\n",
-    "- May be dependent on the sample. If there is high variance, encoding results may be inconsistent.\n",
+    "- Certain classes/categories may have more instances/samples to draw from.\n",
+    "- May be dependent on the sample. If there is high variance in the target values, encoding results may be inconsistent.\n",
     "\n",
     "__Note__\n",
     "\n",
-    "There are other variants of Target Encoding (ex: Ordered Target Encoding) that aim to mitigate the data leakage issue among other challenges involved in Target Encoding."
+    "There are other variants of Target Encoding (ex: Ordered Target Encoding, Weighted Target Encoding, K-Fold Target Encoding) that aim to mitigate the data leakage issue among other challenges involved in Target Encoding."
    ]
   },
   {
@@ -1403,9 +1413,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "877c742e-ca39-4f2a-bab5-643b60a883f2",
+   "metadata": {},
+   "source": [
+    "# Other Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b95e11af-08c8-4c6e-a2fa-7560a1e593b4",
+   "metadata": {},
+   "source": [
+    "__[[1](https://www.youtube.com/watch?v=589nCGeWG1w)]__ Statquest Video on Categorical Encoding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3726bed6-4e08-49f1-a074-a92e5323a619",
+   "id": "d5eb286b-a56f-418e-ad95-029f441f44e2",
    "metadata": {},
    "outputs": [],
    "source": []
