explored specific column

--- a/categoricals/Categoricals.ipynb
+++ b/categoricals/Categoricals.ipynb
@@ -734,7 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "onehot_train.head()"
+    "onehot_train.head()['language_ja']"
    ]
   },
   {
